fix tailwind overflow"

--- a/src/output.css
+++ b/src/output.css
@@ -661,6 +661,10 @@ video {
   gap: 1rem;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
